--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   },
   "homepage": "https://github.com/Null-Austin-Industries/Authincation-service#readme",
   "dependencies": {
+    "argon2": "^0.44.0",
+    "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.2.0",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
   }
 }
