--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Null-Austin-Industries/Authincation-service#readme",
   "dependencies": {
+    "@austinsdk/auth": "^1.1.1",
     "argon2": "^0.44.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
