--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node tests/permissions.test.js",
     "test:old": "node src/app.js -t",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "migrate": "node src/db-migration.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "argon2": "^0.44.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
@@ -34,6 +36,8 @@
     "express-rate-limit": "^8.0.1",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "sqlite-auto-migrator": "^1.3.1",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "type": "commonjs"
 }
