added awesome email support

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,7 @@
 PORT=3000
 JWT_SECRET=qsd90!h3l2$!@asdn1p9dfn12h*#asdnj2
+
+# MailGun
+mailGunApiKey="xxxxxxxxxxxxxxxxxxxxxxx-xxxxxxxxxx-xxxxxxxxx"
+mailGunFromAddr="from@mail.example.com"
+mailGunFromName="First, Last"
