--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "form-data": "^4.0.4",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.1.1",
     "sqlite-auto-migrator": "^1.3.1",
     "sqlite3": "^5.1.7"
   },
