feat: Add automated credits generation script and email migration for users without emails
- Implemented a script to generate a credits section in the README file based on package.json dependencies.
- The script reads the current README, updates the credits section, and writes the changes back to the file.
- Added a migration script to handle users without proper emails by assigning them pseudo-emails and marking them as verified.
- The migration includes logic to create or update email verification entries accordingly.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "node tests/permissions.test.js",
     "test:old": "node src/app.js -t",
     "start": "node src/app.js",
-    "migrate": "node src/db-migration.js"
+    "migrate": "node src/db-migration.js",
+    "extra_resources": "curl -o block.txt \"https://raw.githubusercontent.com/disposable-email-domains/disposable-email-domains/refs/heads/main/disposable_email_blocklist.conf\"",
+    "credits": "node scripts/generate-credits.js"
   },
   "repository": {
     "type": "git",
