--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@austinsdk/auth": "^1.1.1",
     "argon2": "^0.44.0",
+    "base32": "^0.0.7",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "colors": "^1.4.0",
@@ -40,6 +41,8 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^12.1.1",
+    "otpauth": "^9.4.1",
+    "qrcode": "^1.5.4",
     "sqlite-auto-migrator": "^1.3.1",
     "sqlite3": "^5.1.7"
   },
